# deac-rep

./: .gitignore  LICENSE  README.md
procgen_experiments/: README.md  pyproject.toml
procgen_experiments/eval_utils/: mutual_info_procgen_eval.py  runstate_envpool_procgen_eval.py
procgen_experiments/slurm/exp_files/paper/: DAAC-sep-2s-v11.txt  DAAC-sep-3s-v11.txt  DAAC-sep-MICo(C)-2s-v11.txt  DAAC-sep-MICo(C)-3s-v11.txt  DCPG-sep-D(A)-MICo(C)-v12.txt  DCPG-sep-DrA-v12.txt  DCPG-sep-DrC-v12.txt  DCPG-sep-MICo(A)-v12.txt  DCPG-sep-MICo(C)-v12.txt  DCPG-sep-baseline-v9.txt  DCPG-sh-baseline-v10.txt  DDCPG-sep-baseline-v9.txt  DDCPG-sep-critic-v9.txt  DPPG-sep-baseline-v10.txt  PPG-sep-D(A)-MICo(C)-v12.txt  PPG-sep-D(C)-v12.txt  PPG-sep-DrA-v12.txt  PPG-sep-DrC-v12.txt  PPG-sep-MICo(A)-v12.txt  PPG-sep-MICo(C)-mc0.5-advaux1.0-tn0.005-v12.txt  PPG-sep-MICo(C)-v12.txt  PPG-sep-advaux1.0-vfaux1.0-2s-v9.txt  PPG-sep-advaux1.0-vfaux1.0-3s-v9.txt  PPG-sep-baseline-v9.txt  PPG-sep-pb-p-aux-1-aux-e-192-v12.txt  PPG-sep-pb-p-aux-16-aux-e-12-v12.txt  PPG-sep-pb-p-aux-8-aux-e-24-v12.txt  PPG-sh-baseline-v10.txt  (+18 more)
procgen_experiments/train_scripts/: runstate_daac_sep_mico_c_procgen.py  runstate_dcpg_sep_mico_procgen.py  runstate_dcpg_shared_mico_c_procgen.py  runstate_ppg_sep_mico_c_procgen.py  runstate_ppg_shared_mico_c_procgen.py  runstate_ppo_sep_mico_c_procgen.py  runstate_ppo_shared_mico_c_procgen.py
procgen_experiments/utils/: __init__.py  bisim_util.py  constants.py  data_augmentation.py  gym_util.py  job_util.py  log_util.py  mi_util.py  model_util.py  repmetric_util.py
(+8 files in other folders)
