[tool.poetry]
name = "deac_procgen"
version = "0.0.1"
description = ""
authors = ["Samuel Garcin <garcin.samuel@gmail.com>"]
readme = "README.md"

packages = [
    { include = "train_scripts" },
    { include = "eval_utils" },
    { include = "utils"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tyro = "^0.5.5"
tensorboard = "^2.12.0"
envpool = "^0.8.1"
jax = "0.4.8"
flax = "^0.6.8"
optax = "^0.1.4"
huggingface-hub = "^0.12.0"
jaxlib = "0.4.7"
wandb = "^0.13.10"
tensorboardx = "^2.6"
chex = "0.1.5"
gym = "0.23.1"
opencv-python = "^4.7.0.68"
moviepy = "^1.0.3"
rlax = "^0.1.5"
scikit-learn = "^1.3.2"
seaborn = "^0.13.2"
pandas = "^2.0.3"
matplotlib =  "^3.7.5"
tensorflow = {version = "^2.12.0", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
